# drug-smile-fet

./: README.md  example.py  pyproject.toml  setup.py  setup_1.py
dsfet/: fe_1mol.py
src/: fe_1mol.py
tests/: Drugs_for_repurposing.csv  SMILES_FeatureEngineered.csv  example1.py
